# bobo-agent-public

./: .env.example  .env.local.example  .gitignore  LICENSE  README.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260405_0001_baseline_schema.py
backend/app/: main.py  observability.py
backend/app/agent/: __init__.py  graph.py  memory.py  nodes.py  prompting.py  state.py
backend/app/api/: agent.py  auth.py  memory.py  menu.py  records.py  vision.py
backend/app/core/: authz.py  brands.py  config.py  logging.py  rate_limit.py  resilience.py  security.py  threads.py  tool_errors.py
backend/app/memory/: __init__.py  extraction.py  jobs.py  (+6 more)
backend/bobo_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/evals/: README.md  __init__.py  agent_replay.py
backend/scripts/: __init__.py  backfill_menu_taxonomy.py  extract_menu_capture.py  import_menu_json.py  run_agent_replay.py
backend/tests/: test_agent.py  test_agent_memory_integration.py  test_agent_replay_harness.py  test_ai_chat_eval.py  test_auth.py  test_embedding_service.py  test_mcp_remote_integration.py  test_memory_api.py  test_memory_extraction.py  test_memory_jobs_worker.py  test_memory_profile.py  test_memory_repository.py  test_memory_retrieval.py  test_memory_structured_extractor.py  test_menu_api.py  test_menu_capture_import.py  test_menu_search.py  test_menu_search_service.py  test_menu_typing.py  test_observability.py  test_phase2_api.py  test_qdrant_service.py  test_records_isolation.py  test_vision.py
(+90 files in other folders)
